# cardspot

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/workflows/: ci.yml
cmake/: AddGfxSpot.cmake
include/spot/card/: card.h
include/spot/core/: log.h
include/spot/net/: curl.h
src/: CMakeLists.txt  card.cc  main.cc
src/core/: CMakeLists.txt  log.cc
src/net/: CMakeLists.txt  curl.cc  message.cc
test/: CMakeLists.txt  asio.cc  curl.cc  daytime.cc  server.cc
test/client/: CMakeLists.txt  board.cc  board.h  client.cc  connection.cc  connection.h
test/core/: CMakeLists.txt  log.cc  message.cc  message.h
test/server/: CMakeLists.txt  connection.cc  connection.h  server.cc  server.h
