function( add_proj_test TEST )
	set( SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}.cc )
	add_executable( test-${TEST}-${PROJECT_NAME} ${SOURCES} )
	target_link_libraries( test-${TEST}-${PROJECT_NAME} project-options Boost::system fmt::fmt netspot gfxspot )
endfunction()

add_proj_test( asio )
add_proj_test( daytime )
add_proj_test( server )
add_proj_test( curl )
